--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,37 +12,41 @@ pydantic-settings = "^2.0.3"
 aiofiles = "^23.2.1"
 orjson = "^3.9.7"
 
-
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 pytest-asyncio = "^0.21.1"
 pytest-cov = "^4.1.0"
 coverage = {extras = ["toml"], version = "^7.3.2"}
-ruff = "^0.0.292"
 black = "^23.9.1"
-isort = "^5.12.0"
+ruff = "^0.0.290"
 mypy = "^1.5.1"
 sphinx = "^7.2.6"
 cython = "^3.0.3"
 pre-commit = "^3.4.0"
 
 [tool.pytest.ini_options]
-# todo
+testpaths = [
+    "tests",
+]
 
 [tool.coverage.run]
-# todo
+omit = [".*", "*/site-packages/*"]
 
 [tool.coverage.report]
-# todo
+fail_under = 90
 
 [tool.black]
-# todo
-
-[tool.isort]
-# todo
+target-version = ["py311"]
+line-length = 88
 
 [tool.ruff]
-# todo
+target-version = "py311"
+select = ["F", "E", "W", "C90", "I", "N", "D", "UP"]
+src = ["app", "tests"]
+line-length = 88
+
+[tool.ruff.pydocstyle]
+convention = "pep257"
 
 [tool.mypy]
 # todo
