--- a/{{ cookiecutter.repository_name }}/pyproject.toml
+++ b/{{ cookiecutter.repository_name }}/pyproject.toml
@@ -1,3 +1,5 @@
+# todo: review
+# todo: pylibrary template
 [tool.poetry]
 name = "{{ cookiecutter.project_name }}"
 version = "{{ cookiecutter.project_version }}"
@@ -26,7 +28,6 @@ sphinx_rtd_theme = "2.0.0"
 myst-parser = "^2.0.0"
 pydocstyle = "^6.3.0"
 cython = "^3.0.2"
-pre-commit = "^3.4.0"
 
 [tool.pytest.ini_options]
 minversion = "7.1.1"
